--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap'); 
+
 body{
-    background-color: navy;
-    color: ivory
+    font-family: "Roboto Mono";
+
+    background-color: white;
+    color: black;
+    overflow: hidden;
+}
+
+.title{
+    width: 100%;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 30px;
+}
+
+.subtitle{
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 100;
+    margin: 5px;
+}
+
+.video{
+    object-fit: cover;
+    align-self: center;
+    justify-self: center;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.gridview {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    padding: 5px;
+}
+
+.icon {
+    height: 300px;
+    cursor: pointer;
+    border-radius: var(--corner-radius);
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    place-items: center;
+    transition: all 200ms ease-out;
 }
