--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
 
     background-color: white;
     color: black;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .title{
@@ -13,7 +13,6 @@ body{
     text-align: center;
     font-size: 40px;
     font-weight: bold;
-    margin: 30px;
 }
 
 .subtitle{
