added funny group picture
+ failed mute button attempt thing i hate google why can you fIJKFSDklhing add autoplay and not mute + why wont the FUHCKHFKING

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ body{
     margin: 5px;
 }
 
+.funnygrouppicture {
+    width: 100%;
+}
+
 .video{
     object-fit: cover;
     align-self: center;
